add maven plugin for sftp transferts

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 	<modules>
 		<!-- maven plugin required to build the final site -->
 		<module>genfeature-maven-plugin</module>
+		<module>sftp-maven-plugin</module>
 		<module>dependency-site</module>
 	</modules>
 </project>
