--- a/pom.xml
+++ b/pom.xml
@@ -230,64 +230,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
-
-			<!--
-				This plugin will fetch all features and plugins
-				from the online compliete Preesm update site (URL defined in the
-				parent POM). This will be executed after packaging the
-				update site for the current release. It will merge the
-				features and plugins from the online update site and
-				the ones generated for the current release, in
-				${project.build.directory}/gensite/update-site/complete.
-				-->
-			<plugin>
-				<groupId>org.eclipse.tycho.extras</groupId>
-				<artifactId>tycho-p2-extras-plugin</artifactId>
-				<version>${tycho-version}</version>
-				<executions>
-					<execution>
-						<id>copy-current</id>
-						<phase>deploy</phase>
-						<goals>
-							<goal>mirror</goal>
-						</goals>
-						<configuration>
-							<source>
-								<repository><url>${project.baseUri}/target/gensite/update-site/${project.groupId}-${project.version}</url></repository>
-								<repository><url>${complete.p2.repo}</url></repository>
-							</source>
-							<append>true</append>
-							<compress>false</compress>
-							<includeOptional>true</includeOptional>
-							<destination>${project.build.directory}/gensite/update-site/complete</destination>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.ietr.maven</groupId>
-				<artifactId>sftp-maven-plugin</artifactId>
-				<version>1.0.0</version>
-				<executions>
-					<execution>
-						<id>upload-repo</id>
-						<phase>deploy</phase>
-						<configuration>
-							<serverId>sf-preesm-update-site</serverId>
-							<serverHost>web.sourceforge.net</serverHost>
-							<strictHostKeyChecking>false</strictHostKeyChecking>
-							<mode>send</mode>
-							<remotePath>/home/project-web/preesm/htdocs/gensite/</remotePath>
-							<localPath>${project.build.directory}/gensite/</localPath>
-						</configuration>
-						<goals>
-							<goal>sftp-transfert</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
 			<!-- Ant Task to create a symlink to the latest version -->
 			<!-- ## NOTE: make sure this is after the tycho-p2-extras-plugin in the pom.xml text -->
 			<plugin>
@@ -307,6 +249,114 @@
 							</target>
 							<exportAntProperties>true</exportAntProperties>
 						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			
+			<plugin>
+			  <groupId>com.googlecode.maven-download-plugin</groupId>
+			  <artifactId>download-maven-plugin</artifactId>
+  			  <version>1.3.0</version>
+			  <executions>
+				<execution>
+				  <phase>deploy</phase>
+				  <id>fetch-artifacts.xml</id>
+				  <goals>
+					<goal>wget</goal>
+				  </goals>
+				  <configuration>
+					<url>${complete.p2.repo}/artifacts.xml</url>
+					<outputFileName>artifacts.xml</outputFileName>
+					<outputDirectory>${project.build.directory}/gensite/update-site/complete/</outputDirectory>
+				  </configuration>
+				</execution>
+				<execution>
+				  <phase>deploy</phase>
+				  <id>fetch-content.xml</id>
+				  <goals>
+					<goal>wget</goal>
+				  </goals>
+				  <configuration>
+					<url>${complete.p2.repo}/content.xml</url>
+					<outputFileName>content.xml</outputFileName>
+					<outputDirectory>${project.build.directory}/gensite/update-site/complete/</outputDirectory>
+				  </configuration>
+				</execution>
+			  </executions>
+			</plugin>
+			<!--
+				This plugin will fetch all features and plugins
+				from the online compliete Preesm update site (URL defined in the
+				parent POM). This will be executed after packaging the
+				update site for the current release. It will merge the
+				features and plugins from the online update site and
+				the ones generated for the current release, in
+				${project.build.directory}/gensite/update-site/complete.
+				-->
+			<plugin>
+				<groupId>org.eclipse.tycho.extras</groupId>
+				<artifactId>tycho-p2-extras-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<executions>
+					<!-- First fetch content metadata of the online repo 
+					<execution>
+						<id>copy-online-repo</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>mirror</goal>
+						</goals>
+						<configuration>
+							<source>
+								<repository><url>${complete.p2.repo}</url></repository>
+							</source>
+							<append>false</append>
+							<compress>false</compress>
+							<includeOptional>true</includeOptional>
+							<mirrorMetadataOnly>true</mirrorMetadataOnly>
+							<destination>${project.build.directory}/gensite/update-site/complete</destination>
+						</configuration>
+					</execution>-->
+					<!-- Then append metadata AND content of the current build  -->
+					<execution>
+						<id>append-current-build</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>mirror</goal>
+						</goals>
+						<configuration>
+							<source>
+								<repository><url>${project.baseUri}/target/gensite/update-site/${project.groupId}-${project.version}</url></repository>
+							</source>
+							<append>true</append>
+							<compress>false</compress>
+							<includeOptional>true</includeOptional>
+							<destination>${project.build.directory}/gensite/update-site/complete</destination>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Finally upload merged metadata and new content  -->
+			<plugin>
+				<groupId>org.ietr.maven</groupId>
+				<artifactId>sftp-maven-plugin</artifactId>
+				<version>1.0.0</version>
+				<executions>
+					<execution>
+						<id>upload-repo</id>
+						<phase>deploy</phase>
+						<configuration>
+							<serverId>sf-preesm-update-site</serverId>
+							<serverHost>web.sourceforge.net</serverHost>
+							<strictHostKeyChecking>false</strictHostKeyChecking>
+							<mode>send</mode>
+							<remotePath>/home/project-web/preesm/htdocs/gensite/</remotePath>
+							<localPath>${project.build.directory}/gensite/</localPath>
+						</configuration>
+						<goals>
+							<goal>sftp-transfert</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
