--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>org.ietr.externaldeps</groupId>
   <artifactId>org.ietr.externaldeps.site</artifactId>
   <packaging>pom</packaging>
-  <version>1.2.1</version>
+  <version>1.3.0</version>
 
   <properties>
     <tycho-version>1.0.0</tycho-version>
@@ -131,6 +131,12 @@
                 <artifact>
                   <!-- BSD -->
                   <id>jgraph:jgraph:jar:5.13.0.0</id>
+                  <source>true</source>
+                </artifact>
+
+                <artifact>
+                  <!-- MIT -->
+                  <id>org.ojalgo:ojalgo:jar:44.0.0</id>
                   <source>true</source>
                 </artifact>
 
