--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>org.ietr.externaldeps</groupId>
   <artifactId>org.ietr.externaldeps.site</artifactId>
   <packaging>pom</packaging>
-  <version>1.4.0</version>
+  <version>1.4.1</version>
 
   <properties>
     <tycho-version>1.0.0</tycho-version>
@@ -132,6 +132,12 @@
                 <artifact>
                   <!-- MIT -->
                   <id>org.ojalgo:ojalgo:jar:44.0.0</id>
+                  <source>true</source>
+                </artifact>
+
+                <artifact>
+                  <!-- BSD -->
+                  <id>org.choco-solver:choco-solver:jar:4.0.6</id>
                   <source>true</source>
                 </artifact>
 
