--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>org.ietr.externaldeps</groupId>
   <artifactId>org.ietr.externaldeps.site</artifactId>
   <packaging>pom</packaging>
-  <version>2.0.0</version>
+  <version>2.1.0</version>
 
   <properties>
     <tycho-version>1.0.0</tycho-version>
@@ -118,6 +118,12 @@
                 <!-- ############# -->
                 <!-- Maven Central -->
                 <!-- ############# -->
+                <artifact>
+                  <!-- BSD -->
+                  <id>org.scijava:parsington:jar:1.0.1</id>
+                  <source>true</source>
+                </artifact>
+
                 <artifact>
                   <!-- BSD -->
                   <id>jgraph:jgraph:jar:5.13.0.0</id>
