--- a/pom.xml
+++ b/pom.xml
@@ -41,18 +41,6 @@
 
   <build>
     <plugins>
-      <!-- Disable maven deploy plugin: since generated artifacts will be
-        deployed in a P2 repository, there is no need to deploy them in an artifactory/nexus
-        repo. -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.8.2</version>
-        <configuration>
-          <skip>true</skip>
-        </configuration>
-      </plugin>
-
       <!-- This plugin is in charge install local jars as maven artifacts. -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -215,10 +203,21 @@
         </executions>
       </plugin>
 
-
       <!-- ############################################### -->
       <!-- /!\ Editing further should not be necessary /!\ -->
       <!-- ############################################### -->
+
+      <!-- Disable maven deploy plugin: since generated artifacts will be
+        deployed in a P2 repository, there is no need to deploy them in an artifactory/nexus
+        repo. -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.8.2</version>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
 
       <!-- Custom plugin to generate a feature from the previously generated
         P2 repository, and generate a second repository for this feature. -->
@@ -239,6 +238,7 @@
           </execution>
         </executions>
       </plugin>
+
       <!-- Ant Task to create a symlink to the latest version -->
       <!-- ## NOTE: make sure this is after the tycho-p2-extras-plugin in
         the pom.xml text -->
@@ -265,6 +265,8 @@
         </executions>
       </plugin>
 
+      <!-- Download existing repo definition to merge its content with the
+        currently generated one. -->
       <plugin>
         <groupId>com.googlecode.maven-download-plugin</groupId>
         <artifactId>download-maven-plugin</artifactId>
@@ -299,6 +301,8 @@
         </executions>
       </plugin>
 
+      <!-- Mirror generated repo with the copy of the online one (with
+        append option). -->
       <plugin>
         <groupId>org.eclipse.tycho.extras</groupId>
         <artifactId>tycho-p2-extras-plugin</artifactId>
