--- a/pom.xml
+++ b/pom.xml
@@ -105,14 +105,20 @@
                 </artifact>
 
                 <artifact>
+                  <!-- Apache -->
+                  <id>org.apache.velocity:velocity:jar:1.7</id>
+                  <source>true</source>
+                </artifact>
+
+                <artifact>
                   <!-- MIT -->
-                  <id>org.ojalgo:ojalgo:jar:44.0.0</id>
+                  <id>org.ojalgo:ojalgo:jar:45.1.0</id>
                   <source>true</source>
                 </artifact>
 
                 <artifact>
                   <!-- LGPL 2.1+ -->
-                  <id>org.jgrapht:jgrapht-core:jar:1.1.0</id>
+                  <id>org.jgrapht:jgrapht-core:jar:1.2.0</id>
                   <source>true</source>
                 </artifact>
 
@@ -184,7 +190,7 @@
                 </artifact>
                 <artifact>
                   <!-- Apache 2.0 : http://www.apache.org/licenses/LICENSE-2.0.txt  -->
-                  <id>org.apache.commons:commons-lang3:jar:3.5</id>
+                  <id>org.apache.commons:commons-lang3:jar:3.7</id>
                   <source>true</source>
                 </artifact>
 
