--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <groupId>org.ietr.externaldeps</groupId>
   <artifactId>org.ietr.externaldeps.site</artifactId>
   <packaging>pom</packaging>
-  <version>3.2.0</version>
+  <version>3.3.0</version>
 
   <properties>
     <tycho-version>1.0.0</tycho-version>
@@ -129,6 +129,11 @@
                 <artifact>
                   <!-- LGPL 2.1+ -->
                   <id>org.jgrapht:jgrapht-core:jar:1.2.0</id>
+                  <source>true</source>
+                </artifact>
+                <artifact>
+                  <!-- LGPL 2.1+ -->
+                  <id>org.jgrapht:jgrapht-io:jar:1.2.0</id>
                   <source>true</source>
                 </artifact>
 
