--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
    <groupId>org.preesm.externaldeps</groupId>
    <artifactId>org.preesm.externaldeps.site</artifactId>
    <packaging>pom</packaging>
-   <version>3.5.0</version>
+   <version>3.5.1</version>
 
    <!-- More Project Information -->
    <name>Preesm :: External Dependencies</name>
@@ -170,24 +170,24 @@
 
                         <artifact>
                            <!-- MIT -->
-                           <id>org.ojalgo:ojalgo:jar:45.1.0</id>
+                           <id>org.ojalgo:ojalgo:jar:46.3.0</id>
                            <source>true</source>
                         </artifact>
 
                         <artifact>
                            <!-- LGPL 2.1+ -->
-                           <id>org.jgrapht:jgrapht-core:jar:1.2.0</id>
+                           <id>org.jgrapht:jgrapht-core:jar:1.3.0</id>
                            <source>true</source>
                         </artifact>
                         <artifact>
                            <!-- LGPL 2.1+ -->
-                           <id>org.jgrapht:jgrapht-io:jar:1.2.0</id>
+                           <id>org.jgrapht:jgrapht-io:jar:1.3.0</id>
                            <source>true</source>
                         </artifact>
 
                         <!-- BSD -->
                         <artifact>
-                           <id>org.choco-solver:choco-solver:jar:4.0.6</id>
+                           <id>org.choco-solver:choco-solver:jar:4.0.9</id>
                            <source>true</source>
                         </artifact>
 
@@ -248,23 +248,23 @@
                         </artifact>
                         <artifact>
                            <!-- Apache 2.0 : http://www.apache.org/licenses/LICENSE-2.0.txt -->
-                           <id>org.apache.commons:commons-io:jar:1.3.2</id>
+                           <id>commons-io:commons-io:jar:2.6</id>
                            <source>true</source>
                         </artifact>
                         <artifact>
                            <!-- Apache 2.0 : http://www.apache.org/licenses/LICENSE-2.0.txt -->
-                           <id>org.apache.commons:commons-lang3:jar:3.7</id>
+                           <id>org.apache.commons:commons-lang3:jar:3.8.1</id>
                            <source>true</source>
                         </artifact>
 
                         <artifact>
                            <!-- -->
-                           <id>com.fasterxml.jackson.core:jackson-core:jar:2.9.5</id>
+                           <id>com.fasterxml.jackson.core:jackson-core:jar:2.9.7</id>
                            <source>true</source>
                         </artifact>
                         <artifact>
                            <!-- -->
-                           <id>com.fasterxml.jackson.module:jackson-module-jsonSchema:jar:2.9.5</id>
+                           <id>com.fasterxml.jackson.module:jackson-module-jsonSchema:jar:2.9.7</id>
                            <source>true</source>
                         </artifact>
 
